--- a/app/templates/request_token.html
+++ b/app/templates/request_token.html
@@ -20,13 +20,18 @@
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-5">
           <div class="card-body">
+            
+            {% if message %}
+            <h5 class="card-title text-center">{{ message }}</h5>
+            {% endif %}
+
             {% if token %}
             <h5 class="card-title text-center">API Key</h5>
             <p>{{ token }}</p>
             {% else %}
             <h5 class="card-title text-center">Sign In</h5>
             <form
-              action="{{ url_for('token') }}"
+              action="{{ url_for('apikey') }}"
               method="post"
               class="form-signin"
             >
